--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      
       <!-- Timeblocks go here -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script>
+      $("#currentDay").text(moment().format('dddd, LL'));
       let a = moment().format();
       console.log(a)
 
