--- a/index.html
+++ b/index.html
@@ -28,9 +28,116 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
-      
-      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>9:00 am</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>10:00 am</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>11:00 am</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>12:00 pm</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>1:00 pm</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>2:00 pm</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>3:00 pm</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>4:00 pm</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-2 hour row2">
+          <p>5:00 pm</p>
+        </div>
+        <div class="col-lg-8 whiteBorder row2">
+          <textarea class="textarea"></textarea>
+        </div>
+        <div class="col-lg-2 row2">
+          <button class="saveBtn" type="button">Save</button>
+        </div>
+      </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
