--- a/index.html
+++ b/index.html
@@ -14,128 +14,126 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Mulish:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p class="heading-text">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="heading-text"></p>
     </header>
 
     <div class="container">
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>9:00 am</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h9">
-          <textarea class="textarea" id="i9"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h9">
+          <textarea class="textarea w-100" id="i9"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b9">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b9">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>10:00 am</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h10">
-          <textarea class="textarea" id="i10"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h10">
+          <textarea class="textarea w-100" id="i10"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b10">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b10">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>11:00 am</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h11">
-          <textarea class="textarea" id="i11"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h11">
+          <textarea class="textarea w-100" id="i11"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b11">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b11">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>12:00 pm</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h12">
-          <textarea class="textarea" id="i12"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h12">
+          <textarea class="textarea w-100" id="i12"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b12">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b12">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>1:00 pm</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h13">
-          <textarea class="textarea" id="i13"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h13">
+          <textarea class="textarea w-100" id="i13"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b13">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b13">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>2:00 pm</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h14">
-          <textarea class="textarea" id="i14"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h14">
+          <textarea class="textarea w-100" id="i14"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b14">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b14">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>3:00 pm</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h15">
-          <textarea class="textarea" id="i15"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h15">
+          <textarea class="textarea w-100" id="i15"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b15">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b15">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>4:00 pm</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h16">
-          <textarea class="textarea" id="i16"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h16">
+          <textarea class="textarea w-100" id="i16"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b16">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b16">Save</button>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-2 hour row2">
+        <div class="col-2 hour row2">
           <p>5:00 pm</p>
         </div>
-        <div class="col-lg-8 whiteBorder row2" id="h17">
-          <textarea class="textarea" id="i17"></textarea>
+        <div class="col-8 whiteBorder row2 d-flex tb-padding" id="h17">
+          <textarea class="textarea w-100" id="i17"></textarea>
         </div>
-        <div class="col-lg-2 row2">
-          <button class="saveBtn" type="button" id="b17">Save</button>
+        <div class="col-2 row2 d-flex justify-content-center align-items-center">
+          <button class="saveBtn px-1 px-md-3 px-lg-4" type="button" id="b17">Save</button>
         </div>
       </div>
 
@@ -143,41 +141,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script>
-
-      //adds time stamp to header:
-       $("#currentDay").text(moment().format('dddd, LL'));     
-  
-      
-      //adds appropraite color coding to text areas depending on time of day 
-      for (let i = 9; i < 18; i++ ) {
-        if (i < moment().format('H')) {
-          $("#h" + i).addClass('past')
-        } else if (i > moment().format('H')) {
-          $("#h" + i).addClass('future')
-        } else {
-          $("#h" + i).addClass('present')
-        }
-      }
-
-      //adds local storage save function
-      for (let i = 9; i < 18; i++ ) {
-        $("#b" + i).click(function() {
-          let inputN = $("#i" + i).val()
-          localStorage.setItem("v" + i, inputN) 
-        })
-      }
-
-      //writes saved text to page
-      for (let i = 9; i < 18; i++ ) {
-        let localStorageItem = localStorage.getItem("v" + i)
-        if (localStorageItem !== "") {
-          $("#i" + i).html(localStorageItem)
-        }
-      }
-
-
-
-    </script>
+    <script src="./script.js"></script>
+    
   </body>
 </html>
